Add benchmark function, several optimisations, parametrisable serialisation